# pyhees

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  sample.py  setup.py
pyhees/: section10.py  section11_1.py  section11_2.py  section11_3.py  section11_5.py  section2_1.py  section2_1_b.py  section2_1_c.py  section2_2.py  section2_3.py  section2_3_a.py  section2_3_c.py  section2_4.py  section2_5.py  section2_6.py  section2_8.py  section3_1.py  section3_1_a.py  section3_1_d.py  section3_1_e.py  section3_1_file.py  section3_1_heatingday.py  section3_2.py  section3_2_8.py  section3_2_9.py  section3_2_a.py  section3_2_b.py  section3_2_c.py  section3_3_5.py  section3_3_6.py  section3_3_a.py  section3_3_b.py  section3_4.py  section3_4_a.py  section3_4_b.py  section3_4_b_1_1.py  section3_4_b_1_2.py  section3_4_b_2.py  section3_4_b_3.py  section3_4_b_4.py  (+66 more)
pyhees/data/: glass_f.csv  outdoor.csv
src/pyhees/: section10.py  section11_1.py  section11_2.py  section11_3.py  section11_5.py  section11_6.py  section11_7.py  section2_1.py  section2_1_b.py  section2_2.py  section2_2_a.py  section2_2_b.py  section2_2_e.py  section2_3.py  section2_3_a.py  section2_3_b.py  section2_3_c.py  section2_4.py  section2_5.py  section2_5_a.py  section2_5_c.py  section2_6.py  section3_1.py  section3_1_a.py  section3_1_d.py  section3_1_e.py  section3_1_file.py  section3_1_heatingday.py  section3_2.py  section3_2_10.py  section3_2_8.py  section3_2_9.py  section3_2_b.py  section3_2_c.py  section3_3.py  section3_3_5.py  section3_3_6.py  section3_3_b.py  section3_4.py  section3_4_a.py  (+70 more)
(+1782 files in other folders)
