[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="pyhees"
authors = [
    {name = "Pyhees Development Team"}
]
version="3.7.0"
license = {file = "LICENSE"}

dependencies = [
    "numpy >= 1.24.3",
    "pandas >= 2.0.1",
    "scipy >= 1.10.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyhees"]